[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/event_sheets/Gui/main.vs" type="Script" id=1]
[ext_resource path="res://addons/event_sheets/scripts/logicCell.gd" type="Script" id=2]
[ext_resource path="res://addons/event_sheets/icons/icon_add.svg" type="Texture" id=3]

[node name="root" type="TabContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = true
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Mouse", "Size Flags" ]

[node name="EventSheet" type="ScrollContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Scroll", "Size Flags" ]

[node name="FUNCROWS" type="VBoxContainer" parent="EventSheet" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1011.0
margin_bottom = 167.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags" ]

[node name="extends" type="HBoxContainer" parent="EventSheet/FUNCROWS" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1011.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="NodePath" type="RichTextLabel" parent="EventSheet/FUNCROWS/extends" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 334.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=lime]NodePath:[/color] [color=yellow]$root[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "NodePath: $root"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "Size Flags" ]

[node name="extends" type="RichTextLabel" parent="EventSheet/FUNCROWS/extends" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 338.0
margin_right = 672.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=yellow]Extends[/color] [color=aqua]Node2D[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Extends Node2D"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "Size Flags" ]

[node name="scriptPath" type="RichTextLabel" parent="EventSheet/FUNCROWS/extends" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 676.0
margin_right = 1011.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[color=yellow]ScriptPath:[/color] [color=aqua]Res://myScript.es[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "ScriptPath: Res://myScript.es"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "Size Flags" ]

[node name="Function Block" type="VBoxContainer" parent="EventSheet/FUNCROWS" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 1011.0
margin_bottom = 143.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="functionBar" type="HBoxContainer" parent="EventSheet/FUNCROWS/Function Block" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1011.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="remove" type="Button" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "X"
flat = true
align = 2
_sections_unfolded = [ "Anchor", "Hint", "Margin", "Rect" ]

[node name="Label" type="Label" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 5.0
margin_right = 83.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Function:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="LineEdit" type="LineEdit" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 87.0
margin_right = 287.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/font_color = Color( 0.696777, 1, 0.15625, 1 )
text = "ON START (_init)"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Placeholder", "Rect", "Size Flags", "custom_colors" ]

[node name="Label2" type="Label" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 291.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Parameters:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor" ]

[node name="LineEdit2" type="LineEdit" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 372.0
margin_right = 430.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Button" type="Button" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_right = 454.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1

[node name="Panel" type="Panel" parent="EventSheet/FUNCROWS/Function Block/functionBar" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 458.0
margin_right = 1011.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Logic Row" type="HBoxContainer" parent="EventSheet/FUNCROWS/Function Block" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1011.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="rowType" type="MenuButton" parent="EventSheet/FUNCROWS/Function Block/Logic Row" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "IF"
flat = false
align = 1
items = [ "IF", null, false, false, false, -1, 0, null, "", false, "ELIF", null, false, false, false, -1, 0, null, "", false, "ELSE", null, false, false, false, -1, 0, null, "", false, "FOR", null, false, false, false, -1, 0, null, "", false, "WHILE", null, false, false, false, -1, 0, null, "", false, "", null, false, false, false, -1, 0, null, "", true, "VARIABLE", null, false, false, false, -1, 0, null, "", false ]
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="RowData" type="HSplitContainer" parent="EventSheet/FUNCROWS/Function Block/Logic Row" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 1011.0
margin_bottom = 67.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
split_offset = 0
collapsed = false
dragger_visibility = 0
_sections_unfolded = [ "Anchor", "Columns", "Grow Direction", "Icon", "Margin", "Rect", "Size Flags" ]

[node name="Conditions" type="VBoxContainer" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 485.0
margin_bottom = 67.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags" ]

[node name="Label" type="RichTextLabel" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Conditions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 485.0
margin_bottom = 67.4
rect_min_size = Vector2( 0, 67.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[url=0:1//line][color=gray]1.[/color][/url]
[url=1//Add:Condition][img]res://addons/event_sheets/icons/icon_add.svg[/img] Add Condition[/url]
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "1.
 Add Condition
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Margin", "Size Flags", "custom_styles" ]

[node name="Conditions" type="TextEdit" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Conditions" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 485.0
margin_bottom = 34.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 34 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
text = ""
readonly = false
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = true
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = true
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Caret", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="addCondition" type="Button" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Conditions" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 485.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Condition"
icon = ExtResource( 3 )
flat = true
align = 0
_sections_unfolded = [ "Grow Direction" ]

[node name="Actions" type="VBoxContainer" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 497.0
margin_right = 983.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="RichTextLabel" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Actions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 486.0
margin_bottom = 67.4
rect_min_size = Vector2( 0, 67.4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[url=0:1//line][color=gray]1.[/color][/url]
[url=1//Add:Action][img]res://addons/event_sheets/icons/icon_add.svg[/img] Add Action[/url]
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "1.
 Add Action
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "custom_styles" ]

[node name="Actions" type="TextEdit" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Actions" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 486.0
margin_bottom = 34.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 34 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/completion_lines = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = true
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = true
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Caret", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_styles" ]

[node name="addAction" type="Button" parent="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Actions" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 486.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Action"
icon = ExtResource( 3 )
flat = true
align = 0

[node name="Add Row" type="Button" parent="EventSheet/FUNCROWS/Function Block" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 99.0
margin_right = 1011.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Row"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="AddFunction" type="HBoxContainer" parent="EventSheet/FUNCROWS" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 147.0
margin_right = 1011.0
margin_bottom = 167.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="addfunction" type="Button" parent="EventSheet/FUNCROWS/AddFunction" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 701.0
margin_right = 847.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add Built in Function"
flat = false
align = 1

[node name="addfunction2" type="Button" parent="EventSheet/FUNCROWS/AddFunction" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 851.0
margin_right = 1011.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Add a Custom Function"
flat = false
align = 1

[node name="Node2D" type="Node2D" parent="." index="1"]

[connection signal="pressed" from="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Conditions/addCondition" to="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Conditions/Conditions" method="_on_addCondition_pressed"]

[connection signal="pressed" from="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Actions/addAction" to="EventSheet/FUNCROWS/Function Block/Logic Row/RowData/Actions/Actions" method="_on_addAction_pressed"]


